# wash

./: Cargo.toml  LICENSE.md
.github/workflows/: rust.yml
src/: default_patterns.ron  default_patterns.toml  main.rs  pattern.rs
