[package]
name = "wash"
version = "0.1.1"
authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^2.3", features = ["yaml"] }
regex = "^1.4"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }