[package]
name = "wash"
version = "0.1.3"
authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.3"
regex = "^1.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"