[package]
name = "wash"
version = "0.1.4"
authors = ["okrplay <32576280+okrplay@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
